freesia/manifests/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/name: navidrome
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4533"
      labels:
        app.kubernetes.io/name: navidrome
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: navidrome
          image: deluan/navidrome:0.43.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 4000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data
            - name: music
              mountPath: /music
              readOnly: true
          livenessProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 4533
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: navidrome-config
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-music
