freesia/manifests/navidrome/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-navidrome

spec:
  type: ExternalName
  externalName: navidrome.ssa.suzutan.jp
