freesia/manifests/navidrome/outpost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost

spec:
  type: ExternalName
  externalName: ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local
