freesia/manifests/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome

spec:
  type: ExternalName
  externalName: navidrome.ssa.suzutan.jp
